# shardy

./: .cargo-watch.toml  .gitignore  .ignore  Cargo.toml  README.md  compose.yml
.http/: search.http
src/: coordinator.rs  db.rs  errors.rs  main.rs  messages.rs  object_storage.rs  routes.rs  schema.rs  shards.rs  state.rs  sync.rs  web.rs  worker.rs
ui/: README.md  index.html  pnpm-lock.yaml  vite.config.ts
ui/src/: App.vue
ui/src/components/: SampleAsyncTable.vue
ui/src/views/: HomeView.vue
