[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-sdk-s3 = "1.87.0"
axum = { version = "0.8.4", features = ["macros"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "time"] }
tempfile = "3.20.0"
clap = { version = "4.5.39", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.5", features = ["cors"] }
